<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainAllAllNotes">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Новая заметка"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="Заголовок"
        android:textColorHint="#2C2C2C"
        app:boxStrokeColor="#EDEDED"
        app:hintTextColor="#2C2C2C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Zagolovok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Заголовок"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8sp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/DateModernNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14.09.2020"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switchMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="14dp"
                    android:paddingTop="8dp"
                    android:paddingRight="14dp">

                    <TextView
                        android:id="@+id/TodayModernHead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/modern_todayDay"
                        android:textColor="#2C2C2C"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/Today"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12sp"
                        android:background="#fff"
                        android:ems="10"
                        android:hint="@string/hint_todayDay"
                        android:inputType="textMultiLine"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:textSize="16dp"

                        android:imeOptions="actionNext"
                        android:nextFocusForward="@+id/Thanks"
                        android:nextFocusDown="@+id/Thanks"  />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="1dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="14dp"
                    android:paddingTop="8dp"
                    android:paddingRight="14dp">

                    <TextView
                        android:id="@+id/ThanksModernHead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/modern_thanksDay"
                        android:textColor="#2C2C2C"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/Thanks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12sp"
                        android:background="#fff"
                        android:ems="10"
                        android:hint="@string/hint_thanksDay"
                        android:inputType="textMultiLine"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:textSize="16dp"

                        android:imeOptions="actionNext"
                        android:nextFocusForward="@+id/Task"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="1dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="14dp"
                    android:paddingTop="8dp"
                    android:paddingRight="14dp">

                    <TextView
                        android:id="@+id/TaskModernHead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/modern_taskDay"
                        android:textColor="#2C2C2C"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/Task"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12sp"
                        android:background="#fff"
                        android:ems="10"
                        android:hint="@string/hint_taskDay"
                        android:inputType="textMultiLine"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:textSize="16dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="1dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="14dp"
                    android:paddingTop="8dp"
                    android:paddingRight="14dp">

                    <TextView
                        android:id="@+id/SleepModernHead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/modern_sleepDay"
                        android:textColor="#2C2C2C"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/Sleep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12sp"
                        android:background="#fff"
                        android:ems="10"
                        android:hint="@string/hint_sleepDay"
                        android:inputType="textMultiLine"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:textSize="16dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="14dp"
                    android:paddingTop="8dp"
                    android:paddingRight="14dp">

                    <TextView
                        android:id="@+id/MoodModernHead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/modern_moodDay"
                        android:textColor="#2C2C2C"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/Mood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12sp"
                        android:background="#fff"
                        android:ems="10"
                        android:hint="@string/hint_moodDay"
                        android:inputType="textMultiLine"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:textSize="16dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="14dp"
                    android:paddingTop="8dp"
                    android:paddingRight="14dp">

                    <TextView
                        android:id="@+id/LuckyModernHead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/modern_luckyDay"
                        android:textColor="#2C2C2C"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/Lucky"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12sp"
                        android:background="#fff"
                        android:ems="10"
                        android:hint="@string/hint_luckyDay"
                        android:inputType="textMultiLine"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:textSize="16dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="1dp"-->
<!--                android:layout_marginTop="14dp"-->
<!--                android:layout_marginRight="1dp"-->
<!--                android:layout_marginBottom="4dp"-->
<!--                app:cardCornerRadius="10dp"-->
<!--                app:cardElevation="2dp">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:orientation="vertical"-->
<!--                    android:paddingLeft="14dp"-->
<!--                    android:paddingTop="8dp"-->
<!--                    android:paddingRight="14dp">-->

<!--                    <TextView-->
<!--                        android:id="@+id/textView3234"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Какие неудачи произошли за сегодня"-->
<!--                        android:textColor="#2C2C2C"-->
<!--                        android:textSize="18sp"-->
<!--                        android:textStyle="bold" />-->

<!--                    <EditText-->
<!--                        android:id="@+id/Unluky"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="8dp"-->
<!--                        android:layout_marginBottom="12sp"-->
<!--                        android:background="#fff"-->
<!--                        android:ems="10"-->
<!--                        android:hint="Напишите что случилось сегодня"-->
<!--                        android:inputType="textMultiLine"-->
<!--                        android:paddingTop="4dp"-->
<!--                        android:paddingBottom="4dp"-->
<!--                        android:textSize="16dp" />-->
<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ItemsCircle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Сохранить"
                app:backgroundTint="#323232" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>